# pico-shape-detection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
model/: ANN.ipynb
model/accelerometer_data/: README.md
src/: MPU6050.cpp  MPU6050.h  MPU6050.hpp  main.cpp  shape_model.hpp  shape_model_int8.hpp  tflite_wrapper.cpp  tflite_wrapper.hpp
